# termux-usb-test

./: Cargo.toml  LICENSE  README.txt  android-build.sh  android-deploy.sh
src/: main.rs
