[package]
name = "termux-usb-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.1"
libc = "0.2.153"
log = "0.4.20"
nix = "0.26.1"
rusb = { version = "0.9.3", features = ["vendored"] }
